--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a29665">  <td>17/09/01 11:19:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@30b8a058]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32863545</td>   <td></td> </tr>
-<tr bgcolor="a29665">  <td>17/09/01 11:19:43</td>   <td>1379</td> <td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterTest()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@30b8a058]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32863545</td>   <td></td> </tr>
-<tr bgcolor="a29665">  <td>17/09/01 11:17:46</td>   <td>-115852</td> <td title="&gt;&gt;InitAppium.beforeSuite()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@30b8a058]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32863545</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>17/09/01 11:18:26</td>   <td>-75592</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@30b8a058]">&gt;&gt;initDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32863545</td>   <td></td> </tr>
-<tr bgcolor="c273d3">  <td>17/09/01 11:18:26</td>   <td>-75565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.menusEdit()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@30b8a058]">menusEdit</td> 
-  <td>main@32863545</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/09/04 18:18:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/09/04 18:19:47</td>   <td>96049</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;InitAppium.afterClass()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/09/04 18:15:38</td>   <td>-152407</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeSuite()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="759b6d">  <td>17/09/04 18:18:12</td>   <td>1365</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;InitAppium.beforeSuite()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:16:19</td>   <td>-111870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:17:32</td>   <td>-38146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:17:54</td>   <td>-16232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:18:03</td>   <td>-7849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomeTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:50</td>   <td>39771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:55</td>   <td>44537</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:59</td>   <td>48696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:19:38</td>   <td>87470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:19:42</td>   <td>91796</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initDriver()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">&gt;&gt;initDriver</td> 
+<td>&nbsp;</td>  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:59</td>   <td>48715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginChinese()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">loginChinese</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:19:42</td>   <td>91816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginConfim()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">loginConfim</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:19:38</td>   <td>87499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginEmpty()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">loginEmpty</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:55</td>   <td>44561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginErrorNum()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">loginErrorNum</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>17/09/04 18:18:50</td>   <td>39800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginErrorUser()[pri:0, instance:com.yiibai.primera.testng.cases.LoginTest@72b6cbcc]">loginErrorUser</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:16:19</td>   <td>-111845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.menusEdit()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">menusEdit</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:18:03</td>   <td>-7834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.morningPaper()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">morningPaper</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:17:32</td>   <td>-38129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.search1()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">search1</td> 
+  <td>main@733957003</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>17/09/04 18:17:54</td>   <td>-16213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomeTest.search2()[pri:0, instance:com.yiibai.primera.testng.cases.HomeTest@76707e36]">search2</td> 
+  <td>main@733957003</td>   <td></td> </tr>
 </table>
